<resources>
    <string name="app_name">Github Users</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="search_hint">Cari pengguna</string>
    <string name="search">Cari Pengguna</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nilaiAwalFollow">00</string>
    <string name="namatv">Nama</string>
    <string name="usernametv">(Username)</string>
    <string name="followerstv">Followers</string>
    <string name="followingtv">Following</string>
</resources>